# PaperClaw

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USER-JOURNEY.md  install.sh  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: paper-agent.mdc
.cursor/skills/paper-agent/: SKILL.md
docs/: README.md  glossary.md  paper-agent-overview.md
docs/architecture/adr/: ADR-001-mcp-as-ide-integration.md  ADR-002-sqlite-local-first.md  ADR-003-interaction-layer-division.md  ADR-004-workspace-layer.md  ADR-005-batch-scoring.md  ADR-006-feedback-loop.md
docs/v01/: README.md  idea-brief.md  traceability-matrix.md
docs/v01_source/: README.md  mvp.md
docs/v02/: vision.md
docs/v03/: feature-list.md
docs/v04-experience/: idea-brief.md  traceability-matrix.md  vision.md
paper_agent/: __init__.py
paper_agent/app/: config_manager.py  context.py
paper_agent/cli/: _skill_content.py  app.py  console.py  shell.py
paper_agent/domain/: exceptions.py
paper_agent/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
paper_agent/services/: citation_service.py  collection_manager.py  credibility_assessor.py  digest_generator.py  extraction_engine.py  feedback_manager.py  filtering_manager.py  pdf_processor.py  profile_manager.py  research_engine.py  research_planner.py  search_engine.py  source_collector.py  watchlist_manager.py  workspace_manager.py
plugin/: README.md  USER-JOURNEY.md  install.sh
plugin/claude-code/: .mcp.json
tests/unit/: test_download_and_filter.py  test_mcp_tools.py  test_source_adapters.py  test_storage.py
(+100 files in other folders)
